// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InformationBox /> by default matches with snapshot 1`] = `
<div
  className="sc-bwzfXH fsqDNS k-InformationBox"
>
  <div
    className="k-InformationBox__container"
  >
    <p
      className="sc-bdVaJa kDUvvA k-InformationBox__title k-u-margin-bottom-single"
    />
    <div
      className="k-InformationBox__content k-u-margin-top-single"
    />
  </div>
</div>
`;

exports[`<InformationBox /> with contents matches with snapshot 1`] = `
<div
  className="sc-bwzfXH fsqDNS k-InformationBox"
>
  <div
    className="k-InformationBox__container"
  >
    <h3
      aria-label="custom aria prop"
      className="sc-bdVaJa kDUvvA k-InformationBox__title k-u-margin-bottom-single customClassName"
    >
      Title
    </h3>
    <div
      className="k-InformationBox__content k-u-margin-top-single"
    >
      Content
    </div>
  </div>
</div>
`;
